@@ -6,10 +6,15 @@
 
 package org.mozilla.javascript;
 
-import java.io.*;
-import java.lang.reflect.*;
-import java.util.Map;
+import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
+import java.io.Serializable;
+import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.Date;
+import java.util.Map;
 
 /**
  * This class reflects non-Array Java objects into the JavaScript environment.  It
@@ -22,9 +27,10 @@ import java.util.Date;
  * @see NativeJavaClass
  */
 
-public class NativeJavaObject implements Scriptable, Wrapper, Serializable
+public class NativeJavaObject
+    implements Scriptable, SymbolScriptable, Wrapper, Serializable
 {
-    static final long serialVersionUID = -6948590651130498591L;
+    private static final long serialVersionUID = -6948590651130498591L;
 
     public NativeJavaObject() { }
 
@@ -57,14 +63,22 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
             = members.getFieldAndMethodsObjects(this, javaObject, false);
     }
 
+    @Override
     public boolean has(String name, Scriptable start) {
         return members.has(name, false);
     }
 
+    @Override
     public boolean has(int index, Scriptable start) {
         return false;
     }
 
+    @Override
+    public boolean has(Symbol key, Scriptable start) {
+        return false;
+    }
+
+    @Override
     public Object get(String name, Scriptable start) {
         if (fieldAndMethods != null) {
             Object result = fieldAndMethods.get(name);
@@ -77,10 +91,18 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
         return members.get(this, name, javaObject, false);
     }
 
+    @Override
+    public Object get(Symbol key, Scriptable start) {
+        // Native Java objects have no Symbol members
+        return Scriptable.NOT_FOUND;
+    }
+
+    @Override
     public Object get(int index, Scriptable start) {
         throw members.reportMemberNotFound(Integer.toString(index));
     }
 
+    @Override
     public void put(String name, Scriptable start, Object value) {
         // We could be asked to modify the value of a property in the
         // prototype. Since we can't add a property to a Java object,
@@ -91,21 +113,43 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
             prototype.put(name, prototype, value);
     }
 
+    @Override
+    public void put(Symbol symbol, Scriptable start, Object value) {
+        // We could be asked to modify the value of a property in the
+        // prototype. Since we can't add a property to a Java object,
+        // we modify it in the prototype rather than copy it down.
+        String name = symbol.toString();
+        if (prototype == null || members.has(name, false)) {
+            members.put(this, name, javaObject, value, false);
+        } else if (prototype instanceof SymbolScriptable) {
+            ((SymbolScriptable)prototype).put(symbol, prototype, value);
+        }
+    }
+
+    @Override
     public void put(int index, Scriptable start, Object value) {
         throw members.reportMemberNotFound(Integer.toString(index));
     }
 
+    @Override
     public boolean hasInstance(Scriptable value) {
         // This is an instance of a Java class, so always return false
         return false;
     }
 
+    @Override
     public void delete(String name) {
     }
 
+    @Override
+    public void delete(Symbol key) {
+    }
+
+    @Override
     public void delete(int index) {
     }
 
+    @Override
     public Scriptable getPrototype() {
         if (prototype == null && javaObject instanceof String) {
             return TopLevel.getBuiltinPrototype(
@@ -118,6 +162,7 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
     /**
      * Sets the prototype of the object.
      */
+    @Override
     public void setPrototype(Scriptable m) {
         prototype = m;
     }
@@ -125,6 +170,7 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
     /**
      * Returns the parent (enclosing) scope of the object.
      */
+    @Override
     public Scriptable getParentScope() {
         return parent;
     }
@@ -132,10 +178,12 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
     /**
      * Sets the parent (enclosing) scope of the object.
      */
+    @Override
     public void setParentScope(Scriptable m) {
         parent = m;
     }
 
+    @Override
     public Object[] getIds() {
         return members.getIds(false);
     }
@@ -151,21 +199,25 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
         return cx.getWrapFactory().wrap(cx, scope, obj, staticType);
     }
 
+    @Override
     public Object unwrap() {
         return javaObject;
     }
 
+    @Override
     public String getClassName() {
         return "JavaObject";
     }
 
+    @Override
     public Object getDefaultValue(Class<?> hint)
     {
         Object value;
         if (hint == null) {
             if (javaObject instanceof Boolean) {
                 hint = ScriptRuntime.BooleanClass;
-            } else if (javaObject instanceof Number) {
+            }
+            if (javaObject instanceof Number) {
                 hint = ScriptRuntime.NumberClass;
             }
         }
@@ -451,9 +503,7 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
             if (valueClass.isArray()) {
                 return JSTYPE_JAVA_ARRAY;
             }
-            else {
-                return JSTYPE_JAVA_OBJECT;
-            }
+            return JSTYPE_JAVA_OBJECT;
         }
     }
 
@@ -493,9 +543,7 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
                 type == ScriptRuntime.ObjectClass) {
                 return "undefined";
             }
-            else {
-                reportConversionError("undefined", type);
-            }
+            reportConversionError("undefined", type);
             break;
 
         case JSTYPE_BOOLEAN:
@@ -519,7 +567,8 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
             }
             else if (type == ScriptRuntime.ObjectClass) {
                 Context context = Context.getCurrentContext();
-                if(context.hasFeature(Context.FEATURE_INTEGER_WITHOUT_DECIMAL_PLACE)) {
+                if ((context != null) &&
+                    context.hasFeature(Context.FEATURE_INTEGER_WITHOUT_DECIMAL_PLACE)) {
                     //to process numbers like 2.0 as 2 without decimal place
                     long roundedValue = Math.round(toDouble(value));
                     if(roundedValue == toDouble(value)) {
@@ -551,9 +600,7 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
                 if (((CharSequence)value).length() == 1) {
                     return Character.valueOf(((CharSequence)value).charAt(0));
                 }
-                else {
-                    return coerceToNumber(type, value);
-                }
+                return coerceToNumber(type, value);
             }
             else if ((type.isPrimitive() && type != Boolean.TYPE)
                      || ScriptRuntime.NumberClass.isAssignableFrom(type))
@@ -593,19 +640,13 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
                 }
                 return coerceToNumber(type, value);
             }
-            else {
-              if (type == ScriptRuntime.StringClass) {
-                    return value.toString();
-                }
-                else {
-                    if (type.isInstance(value)) {
-                        return value;
-                    }
-                    else {
-                        reportConversionError(value, type);
-                    }
-                }
+          if (type == ScriptRuntime.StringClass) {
+                return value.toString();
             }
+            if (type.isInstance(value)) {
+                return value;
+            }
+            reportConversionError(value, type);
             break;
 
         case JSTYPE_OBJECT:
@@ -654,7 +695,8 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
                 reportConversionError(value, type);
             }
             else if (type.isInterface() && (value instanceof NativeObject
-                    || value instanceof NativeFunction)) {
+                    || value instanceof NativeFunction
+                    || value instanceof ArrowFunction)) {
                 // Try to use function/object as implementation of Java interface.
                 return createInterfaceAdapter(type, (ScriptableObject) value);
             } else {
@@ -706,33 +748,30 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
             type == ScriptRuntime.DoubleClass || type == Double.TYPE) {
             return valueClass == ScriptRuntime.DoubleClass
                 ? value
-                : new Double(toDouble(value));
+                : Double.valueOf(toDouble(value));
         }
 
         if (type == ScriptRuntime.FloatClass || type == Float.TYPE) {
             if (valueClass == ScriptRuntime.FloatClass) {
                 return value;
             }
+            double number = toDouble(value);
+            if (Double.isInfinite(number) || Double.isNaN(number)
+                || number == 0.0) {
+                return Float.valueOf((float)number);
+            }
+
+            double absNumber = Math.abs(number);
+            if (absNumber < Float.MIN_VALUE) {
+                return Float.valueOf((number > 0.0) ? +0.0f : -0.0f);
+            }
+            else if (absNumber > Float.MAX_VALUE) {
+                return Float.valueOf((number > 0.0) ?
+                                 Float.POSITIVE_INFINITY :
+                                 Float.NEGATIVE_INFINITY);
+            }
             else {
-                double number = toDouble(value);
-                if (Double.isInfinite(number) || Double.isNaN(number)
-                    || number == 0.0) {
-                    return new Float((float)number);
-                }
-                else {
-                    double absNumber = Math.abs(number);
-                    if (absNumber < Float.MIN_VALUE) {
-                        return new Float((number > 0.0) ? +0.0 : -0.0);
-                    }
-                    else if (absNumber > Float.MAX_VALUE) {
-                        return new Float((number > 0.0) ?
-                                         Float.POSITIVE_INFINITY :
-                                         Float.NEGATIVE_INFINITY);
-                    }
-                    else {
-                        return new Float((float)number);
-                    }
-                }
+                return Float.valueOf((float)number);
             }
         }
 
@@ -741,56 +780,49 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
             if (valueClass == ScriptRuntime.IntegerClass) {
                 return value;
             }
-            else {
-                return Integer.valueOf((int)toInteger(value,
-                                                  ScriptRuntime.IntegerClass,
-                                                  Integer.MIN_VALUE,
-                                                  Integer.MAX_VALUE));
-            }
+            return Integer.valueOf((int)toInteger(value,
+                                              ScriptRuntime.IntegerClass,
+                                              Integer.MIN_VALUE,
+                                              Integer.MAX_VALUE));
         }
 
         if (type == ScriptRuntime.LongClass || type == Long.TYPE) {
             if (valueClass == ScriptRuntime.LongClass) {
                 return value;
-            } else {
-                /* Long values cannot be expressed exactly in doubles.
-                 * We thus use the largest and smallest double value that
-                 * has a value expressible as a long value. We build these
-                 * numerical values from their hexidecimal representations
-                 * to avoid any problems caused by attempting to parse a
-                 * decimal representation.
-                 */
-                final double max = Double.longBitsToDouble(0x43dfffffffffffffL);
-                final double min = Double.longBitsToDouble(0xc3e0000000000000L);
-                return Long.valueOf(toInteger(value,
-                                          ScriptRuntime.LongClass,
-                                          min,
-                                          max));
             }
+            /* Long values cannot be expressed exactly in doubles.
+             * We thus use the largest and smallest double value that
+             * has a value expressible as a long value. We build these
+             * numerical values from their hexidecimal representations
+             * to avoid any problems caused by attempting to parse a
+             * decimal representation.
+             */
+            final double max = Double.longBitsToDouble(0x43dfffffffffffffL);
+            final double min = Double.longBitsToDouble(0xc3e0000000000000L);
+            return Long.valueOf(toInteger(value,
+                                      ScriptRuntime.LongClass,
+                                      min,
+                                      max));
         }
 
         if (type == ScriptRuntime.ShortClass || type == Short.TYPE) {
             if (valueClass == ScriptRuntime.ShortClass) {
                 return value;
             }
-            else {
-                return Short.valueOf((short)toInteger(value,
-                                                  ScriptRuntime.ShortClass,
-                                                  Short.MIN_VALUE,
-                                                  Short.MAX_VALUE));
-            }
+            return Short.valueOf((short)toInteger(value,
+                                              ScriptRuntime.ShortClass,
+                                              Short.MIN_VALUE,
+                                              Short.MAX_VALUE));
         }
 
         if (type == ScriptRuntime.ByteClass || type == Byte.TYPE) {
             if (valueClass == ScriptRuntime.ByteClass) {
                 return value;
             }
-            else {
-                return Byte.valueOf((byte)toInteger(value,
-                                                ScriptRuntime.ByteClass,
-                                                Byte.MIN_VALUE,
-                                                Byte.MAX_VALUE));
-            }
+            return Byte.valueOf((byte)toInteger(value,
+                                            ScriptRuntime.ByteClass,
+                                            Byte.MIN_VALUE,
+                                            Byte.MAX_VALUE));
         }
 
         return new Double(toDouble(value));
@@ -810,9 +842,7 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
                 // XXX: optimize tail-recursion?
                 return toDouble(((Wrapper)value).unwrap());
             }
-            else {
-                return ScriptRuntime.toNumber(value);
-            }
+            return ScriptRuntime.toNumber(value);
         }
         else {
             Method meth;
@@ -897,7 +927,7 @@ public class NativeJavaObject implements Scriptable, Wrapper, Serializable
         }
 
         if (staticType != null) {
-            out.writeObject(staticType.getClass().getName());
+            out.writeObject(staticType.getName());
         } else {
             out.writeObject(null);
         }
